# cactus

./: README.md
cactus/engine/: engine.h  engine_model.cpp
cactus/graph/: graph.h  graph_core.cpp  graph_ops_nn.cpp
cactus/kernel/: kernel.h  kernel_nn.cpp
cactus/models/: model.h  model_qwen_moe.cpp
docs/: cactus-qwen3-moe-plan.md
python/src/: config_utils.py  converter.py  tensor_io.py  weight_patterns.py
tests/phase3/: CMakeLists.txt  generate_chat_reference.py  generate_reference.py  inspect_tensors.py  mem_profile.sh  reference_output.json  resave_router_fp16.py  telemetry_stub.cpp  test_qwen3_moe.cpp
